# embedded_hal_sim

./: Cargo.toml  README.md  index.html  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: display-counter.rs  ethernet.rs  morse.rs
examples/utils/: mod.rs
src/: adc.rs  ethernet.rs  graphics.rs  lib.rs  serial.rs  utils.rs
src/flash/: mod.rs  w25q32jv.rs
src/gpio/: input.rs  mod.rs  output.rs
src/serial/: mod.rs  split.rs  web_serial.rs
