[package]
name = "embedded_hal_sim"
version = "0.1.0"
edition = "2024"
publish = ["gitea"]

[dependencies]
eframe = { version = "0.33.3", optional = true }
egui = { version = "0.33.3", optional = true }
embassy-net-driver-channel = { version = "0.3.2", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-storage = { version = "0.3.1", optional = true }
embedded-storage-async = { version = "0.4.1", optional = true }
futures = "0.3.31"
tokio = { version = "1.48.0", optional = true, features = ["macros", "time"] }
tokio-tun = { version = "0.15.0", optional = true }
winit = { version = "0.30.12", optional = true }

[features]
default = ["ethernet", "flash"]

ethernet = ["tokio-tun", "embassy-net-driver-channel", "tokio"]
tokio-tun = ["dep:tokio-tun"]
embassy-net-driver-channel = ["dep:embassy-net-driver-channel"]
tokio = ["dep:tokio"]

flash = ["embedded-storage-async", "embedded-storage"]
embedded-storage-async = ["dep:embedded-storage-async"]
embedded-storage = ["dep:embedded-storage"]

egui = ["dep:egui", "eframe", "winit"]
eframe = ["dep:eframe"]
winit = ["dep:winit"]

[[example]]
name = "morse"
required-features = ["egui"]