[package]
name = "embedded_hal_sim"
version = "0.1.0"
edition = "2024"
publish = ["gitea"]

[dependencies]
eframe = { version = "0.33.3", optional = true }
egui = { version = "0.33.3", optional = true }
embassy-net-driver-channel = { version = "0.3.2", optional = true }
embassy-sync = { version = "0.7.2", features = ["std"] }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-storage = { version = "0.3.1", optional = true }
embedded-storage-async = { version = "0.4.1", optional = true }
futures = "0.3.31"
log = "0.4.29"
parking_lot = "0.12.5"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48.0", optional = true, features = ["macros", "time", "sync"] }
tokio-tun = { version = "0.15.0", optional = true }
winit = { version = "0.30.12", optional = true }
#env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
gloo-timers = { version = "0.3.0", features = ["futures"] } # TimeoutFuture::new(1_000).await;

[features]
default = ["flash"]

ethernet = ["tokio-tun", "embassy-net-driver-channel", "tokio"]
tokio-tun = ["dep:tokio-tun"]
embassy-net-driver-channel = ["dep:embassy-net-driver-channel"]
tokio = ["dep:tokio"]

flash = ["embedded-storage-async", "embedded-storage"]
embedded-storage-async = ["dep:embedded-storage-async"]
embedded-storage = ["dep:embedded-storage"]

egui = ["dep:egui", "eframe", "winit", "tokio/rt"]
eframe = ["dep:eframe"]
winit = ["dep:winit"]



[[example]]
name = "morse"
required-features = ["egui"]
